# vad-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
deploy/: deploy.md  setup-server.sh
deploy/nginx/: voice.biosystems.dev.conf
docs/: INTEGRATION.md  TUNING.md
examples/: stream_file_ws.py
examples/browser-voice/: index.html
frontend/: KIMI_REDESIGN_BRIEF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: pcm-capture-processor.js
frontend/public/assets/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/components/: ChunkDebugPanel.tsx  ConnectionPanel.tsx  Controls.tsx  EventLog.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useVoiceSession.ts
frontend/src/lib/: audio.ts  errors.ts  graphql.ts  resample.test.ts  resample.ts  types.ts
scripts/: docker-restart.sh  download_models.py  preview_interim_chunks.py
src/vad_proxy/: __init__.py  cli.py  config.py  logging_setup.py  observability.py  pipeline.py  server.py
src/vad_proxy/audio/: __init__.py  decode.py  interim_chunker.py  segmenter.py  vad.py
src/vad_proxy/graphql/: __init__.py  schema.py  session.py
src/vad_proxy/llm/: __init__.py  base.py  deepseek.py  factory.py  prompts.py
src/vad_proxy/output/: __init__.py  base.py  (+4 more)
tests/: conftest.py  test_chunk_debug.py  test_graphql_ws.py  test_interim_chunker_unit.py  test_interim_chunking.py  test_legacy_ws.py  test_observability.py  test_pipeline_mock.py  test_sample_rate.py  test_segmenter_max_split.py  test_session_limits.py  test_shared_vad.py  test_smoke_cli.py  test_stt_retry.py  test_vad_smoke.py  test_voice_api_key.py
(+11 files in other folders)
