[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vad-proxy"
version = "0.1.0"
description = "LLM-powered voice transcription proxy: local Silero VAD endpointing + pluggable cloud STT + DeepSeek smart-layer + pluggable output."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "marginsystems" }]
keywords = ["vad", "voice", "transcription", "stt", "silero", "deepseek", "voice-activity-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24",
    # Pinned <1.20: newer onnxruntime CPU builds produce non-deterministic
    # LSTM outputs for the Silero model on some hardware, which breaks VAD
    # endpointing. 1.19.x is verified stable.
    "onnxruntime>=1.16.1,<1.20",
    "av>=11.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "strawberry-graphql[fastapi]>=0.230",
]

[project.optional-dependencies]
deepgram = ["deepgram-sdk>=3.0"]
openai = ["openai>=1.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
all = ["deepgram-sdk>=3.0", "openai>=1.30"]

[project.scripts]
vad-proxy = "vad_proxy.cli:main"

[project.urls]
Homepage = "https://github.com/marginsystems/vad-proxy"
Repository = "https://github.com/marginsystems/vad-proxy"

[tool.hatch.build.targets.wheel]
packages = ["src/vad_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
